# test

NlsSdkCpp3.X/: CMakeLists.txt  build.sh
NlsSdkCpp3.X/demo/: speechSynthesizerDemo.cpp  srDemo  stDemo  syDemo  syLongDemo
ali/: CAsrTtsAliyun.cpp  CAsrTtsAliyun.hpp  CMakeLists.txt
asrSpeech/: CMakeLists.txt
b_test/cc/: CMakeLists.txt  build.sh  jgb_test  makefile
b_test/cc/src/: test.cpp
boost_1_64_0/boost/system/: error_code.hpp
mod_jgb/: Makefile  makefile  mod_jgb.c  mod_jgb.la  mod_jgb.lo
mod_jgb/.libs/: mod_jgb.la  mod_jgb.lai  mod_jgb.soT
mongodb/include/libmongoc-1.0/mongoc/: mongoc-config.h
mongodb/lib/: libbson-1.0.so.0.0.0  libbsoncxx.so.3.4.0  libmongoc-1.0.la  libmongoc-1.0.so.0.0.0  libmongocxx.so.3.4.0
myesl/: makefile  myesl
test/: CMakeLists.txt  main.cpp  make.sh  slot.list  slot.list1  test.list
test/boost_1_64_0/stage/lib/: libboost_container.so.1.64.0  libboost_iostreams.so.1.64.0
test/calendar/: calendar.cpp  calendar.h
test/http/: httpTest.hpp  websocket.hpp
test/include/: A.hpp  B.hpp  C.hpp  LoadLD.hpp  RBTree.hpp  common.hpp  jgb_LoadLD.hpp
test/include/loadAPI/: loadAPI.hpp
test/include/lock/: jgb_cond.hpp  jgb_mutex.hpp
test/include/mem/: jgb_mempool.hpp
test/include/redis/: redisJgb.hpp  redisTest.hpp  slot.hpp
test/include/tool/: mySql.hpp  myTime.hpp  toolUtl.hpp
test/mysql/: DBMySql.cpp  DBMySql.h  DBTimer.cpp  DBTimer.h  TimerStruct.hpp
test/rapidjson/: rapidjson_helper.h
test/redis/include/hiredis-vip/: hircluster.h
test/redis/lib/: bhiredis_vip.so.2  libhiredis_vip.so.2.0
test/redis/lib/pkgconfig/: hiredis_vip.pc
test/src/: A.cpp  B.cpp  C.cpp  main.cpp
test/src/SDK/: CMakeLists.txt  main.cpp
test/src/SDK.bak/: CMakeLists.txt
test/src/SDK.bak/include/: clientAPI.hpp  clientMsg.hpp  md5.h
test/src/SDK.bak/src/: clientAPI.cpp  clientMsg.cpp  md5.cpp
test/src/SDK/include/: RWLock.hpp  clientAPI.hpp  clientMsg.hpp  md5.h  md5_jgb.h
test/src/SDK/src/: clientAPI.cpp  clientMsg.cpp  main.cpp  md5.cpp  md5_jgb.cpp
test/src/common/cxxurl/: Request.h  RequestBuilder.h  UrlEncoder.h  cxxurl_all.h
test/src/common/md5/: my_md5.cpp  my_md5.hpp
test/src/leetCode/: leetCodeEasy.cpp  leetCodeEasy.h  leetCodeHard.h  leetCodeMid.h  myException.hpp
test/src/lock/: jgb_mutex.cpp
test/src/mem/: CMakeLists.txt
test/src/mongodb/: mongoTest.hpp
test/tencent/: log.1.100.1  log.10.100.2.t  log.10.20.1  log.10.20.2.i  log.10.20.2.t  log.10.20.2.t.1  log.10.30.1  log.10.30.2.i  log.10.30.2.t  log.10.30.2.t.1  log.100.100.1  log.100.100.2.1  log.100.100.2.2  log.100.1000.2.2  log.26.260.1  log.26.260.2.1  log.26.260.2.2  log.50.500.1  log.50.500.2.1  log.50.500.2.2
